--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,11 @@
     </style>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+      <link rel="stylesheet" href="lib/ionic/js/bower_components/angular-chart.js/dist/angular-chart.css">
+
+      <script src="lib/ionic/js/ionic.bundle.js"></script>
+      <script src="lib/ionic/js/bower_components/Chart.js/Chart.min.js"></script>
+      <script src="lib/ionic/js/bower_components/angular-chart.js/dist/angular-chart.js"></script>
 
     <link href="https://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
 
@@ -30,7 +34,7 @@
 // the 2nd parameter is an array of 'requires'
 // 'starter.services' is found in services.js
 // 'starter.controllers' is found in controllers.js
-angular.module('app', ['ionic'])
+angular.module('app', ['ionic','chart.js'])
 
 .run(function($ionicPlatform) {
   $ionicPlatform.ready(function() {
@@ -57,7 +61,8 @@ angular.module('app', ['ionic'])
     .state('page1', {
       url: '/labs',
       templateUrl: 'page1.html',
-      controller: function($scope) {
+      controller: function($scope, $rootScope) {
+          $rootScope.section = 'balanced';
           $scope.reps = [
               {name: 'irth'},
               {name: 'not irth'}
@@ -74,6 +79,15 @@ angular.module('app', ['ionic'])
               {name: 'irth was here'},
               {name: 'not irth wasn\'t here'}
           ];
+          $scope.labels = ["January", "February", "March", "April", "May", "June", "July"];
+          $scope.series = ['Series A', 'Series B'];
+          $scope.data = [
+              [65, 59, 80, 81, 56, 55, 40],
+              [28, 48, 40, 19, 86, 27, 90]
+          ];
+          $scope.onClick = function (points, evt) {
+              console.log(points, evt);
+          };
 
       }
     });
@@ -91,16 +105,18 @@ angular.module('app', ['ionic'])
   <body ng-app="app" animation="slide-left-right-ios7">
   <div>
     <div>
-        <ion-nav-bar class="bar-stable">
+        <ion-nav-bar class="bar-{{$root.section || 'balanced'}}">
             <ion-nav-back-button class="button-icon icon ion-ios7-arrow-back">Back</ion-nav-back-button>
         </ion-nav-bar>
         <ion-nav-view></ion-nav-view>
     </div>
 </div>
-<script id="page1.html" type="text/ng-template">
+  {{$root.section}}
+
+  <script id="page1.html" type="text/ng-template">
     <ion-view title="Lab">
     <ion-tabs class="tabs-stable tabs-icon-top balanced">
-        <ion-tab title="Reps" icon="ion-person-stalker balanced" class="">
+        <ion-tab title="Reps" icon="ion-person-stalker balanced" on-select="$root.section='balanced'">
             <ion-content padding="true" class="has-header">
                 <h1>Edit Reps</h1>
                 <form>
@@ -129,7 +145,7 @@ angular.module('app', ['ionic'])
                 </div></div>
             </ion-content>
         </ion-tab>
-        <ion-tab title="Doctors" icon="ion-ios7-people royal">
+        <ion-tab title="Doctors" icon="ion-ios7-people royal" on-select="$root.section='royal'">
             <ion-content padding="true" class="has-header">
                 <h1>Edit Doctors</h1>
                 <ion-list>
@@ -212,7 +228,12 @@ angular.module('app', ['ionic'])
             </ion-content>
         </ion-tab>
         <ion-tab title="Graphs" icon="ion-arrow-graph-up-right">
-            <ion-content padding="true" class="has-header"></ion-content>
+            <ion-content padding="true" class="has-header">
+                <canvas id="line" class="chart chart-line" data="data"
+                        labels="labels" legend="true" series="series"
+                        click="onClick">
+                </canvas>
+            </ion-content>
         </ion-tab>
     </ion-tabs>
 </ion-view></script>
