--- a/www/index.html
+++ b/www/index.html
@@ -108,7 +108,7 @@ angular.module('app', ['ionic','chart.js'])
   <body ng-app="app" animation="slide-left-right-ios7">
   <div>
     <div>
-        <ion-nav-bar class="bar-{{$root.color}}">
+        <ion-nav-bar class="bar-{{$root.color}}" ng-init="$root.color = 'balanced'">
             <ion-nav-back-button class="button-icon icon ion-ios7-arrow-back">Back</ion-nav-back-button>
         </ion-nav-bar>
         <ion-nav-view></ion-nav-view>
